<resources>
    <string name="app_name" translatable="false">Ya Jary</string>
    <string name="map_key" translatable="false">AIzaSyBdi7cwyRTVj9_wEO71EQx8nDla8zEHpPI</string>
    <string name="firebase_deeplink" translatable="false">https://yajari.page.link</string>
    <string name="time_ago_prefix" />
    <string name="time_ago_suffix" />
    <string name="time_ago_seconds">just now</string>
    <string name="time_ago_minute">1min</string>
    <string name="time_ago_minutes">%dmin</string>
    <string name="time_ago_hour">1h</string>
    <string name="time_ago_hours">%dh</string>
    <string name="time_ago_day">1d</string>
    <string name="time_ago_days">%dd</string>
    <string name="time_ago_month">1mo</string>
    <string name="time_ago_months">%dmos</string>
    <string name="time_ago_year">1y</string>
    <string name="time_ago_years">%dy</string>
    <string name="help_desc_1">+%1$s Donations realized !</string>
    <string name="help_desc_2">+%1$s Givers ready to help !</string>
    <string name="app_desc">Give, receive, a link that makes the difference!</string>
    <string name="app_exit">Are you sure want to exit app?</string>
    <string name="log_in">Log in</string>
    <string name="login_desc">Enter your credentials to access your account.</string>
    <string name="email_address">Email address</string>
    <string name="email_address_s">Email address*</string>
    <string name="password">Password</string>
    <string name="password_s">Password*</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="create_account">Create Account</string>
    <string name="create_account_desc">Let’s create new account to continue !</string>
    <string name="name">Name</string>
    <string name="name_s">Name*</string>
    <string name="date_of_birth">Date of birth*</string>
    <string name="enter_date_of_birth">Enter date of birth</string>
    <string name="mobile_number">Mobile number</string>
    <string name="mobile_number_s">Mobile number*</string>
    <string name="location">Location</string>
    <string name="enter_location">Enter location</string>
    <string name="enter_email_address">Enter email address</string>
    <string name="enter_password">Enter password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="confirm_password_s">Confirm password*</string>
    <string name="enter_confirm_password">Enter confirm password</string>
    <string name="terms_privacy_text">By Continuing you agree to our Terms of services and Privacy policy.</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">Login</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="we_sent_you_6_digit_code">We sent you 6-digit code</string>
    <string name="at">At</string>
    <string name="verify">Verify Now</string>
    <string name="resend_code">Resend code</string>
    <string name="forgot_desc">Please enter your email which associate to\n your account.</string>
    <string name="send_now">Send Now</string>
    <string name="verify_account">Verify Account</string>
    <string name="verify_desc">We just sent you password reset \nLink at %1$s</string>
    <string name="home">Home</string>
    <string name="food">Food</string>
    <string name="add">Add</string>
    <string name="chat">Chat</string>
    <string name="profile">Profile</string>
    <string name="many_object_are_ready_to_take">Many objects and food are ready to take !</string>
    <string name="donation">Donations</string>
    <string name="request">Requests</string>
    <string name="details">Details</string>
    <string name="donate_by">Donate by</string>
    <string name="donations">Donations</string>
    <string name="collection">collections</string>
    <string name="send_request">Send Request</string>
    <string name="send_request_to_take_this_food">Send request to take this %1$s</string>
    <string name="write_your_message">Write your message!</string>
    <string name="msg_success_request">Message sent successfully !</string>
    <string name="continue_e">Continue</string>
    <string name="cancel_reservation_msg">Do you want to cancel the reservation !</string>
    <string name="contact">Contact</string>
    <string name="filters">Filters</string>
    <string name="disability">Availability</string>
    <string name="reset">Reset</string>
    <string name="distance">Distance</string>
    <string name="object_s_condition">Object’s condition</string>
    <string name="select_object_s_condition">Select object’s condition</string>
    <string name="apply">Apply</string>
    <string name="notifications">Notifications</string>
    <string name="object">Object</string>
    <string name="all">All</string>
    <string name="available">Available</string>
    <string name="reserved">Reserved</string>
    <string name="rejected">Rejected</string>
    <string name="finalized">Finalized</string>
    <string name="pending">Pending</string>
    <string name="reject_by_admin">Rejected by admin</string>
    <string name="customer_reviews"><![CDATA[Rating & Review]]></string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_1">1</string>
    <string name="rate_review"><![CDATA[Rating & Review]]></string>
    <string name="communication">Communication</string>
    <string name="punctuality">Punctuality</string>
    <string name="write_your_review">Write your review</string>
    <string name="submit_review">Submit Review</string>
    <string name="app_rate_msg">Are you enjoying our app?</string>
    <string name="rate_exp_msg">How would you rate your experience \nat Ya Jari</string>
    <string name="submit">Submit</string>
    <string name="adoption">Adoptions</string>
    <string name="my_donation">My donations</string>
    <string name="my_request">My Requests</string>
    <string name="category">Category*</string>
    <string name="category_s">Category</string>
    <string name="be_healthy">BE HEALTHY</string>
    <string name="healthy_desc">Please always prefer to provide fresh food,fruit to others !</string>
    <string name="select_category">Select category</string>
    <string name="title">Title*</string>
    <string name="description">Description*</string>
    <string name="item_name">Item name</string>
    <string name="write_about_item">Write about item</string>
    <string name="condition">Condition*</string>
    <string name="select_condition">Select condition</string>
    <string name="location_r">Location*</string>
    <string name="upload_photo_r">Upload photo*</string>
    <string name="upload_photo">Upload photo</string>
    <string name="expiration_date">Expiration date*</string>
    <string name="select_date">Select date</string>
    <string name="photo_desc">Please upload photos of object so other people can take it early</string>
    <string name="i_am_a_commercial">I am a Commercial?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="post_announcement">Post Announcement</string>
    <string name="publish_announcement">Publish Announcement</string>
    <string name="announcement_submission">Announcement submission</string>
    <string name="announcement_s_desc">Your post is under validation \nsubmission soon it will be visible</string>
    <string name="view_announcement">View announcement</string>
    <string name="closed">Finalized</string>
    <string name="write_review">Write review</string>
    <string name="cancel_reservation">Cancel reservation</string>
    <string name="say_something">Say Something…</string>
    <string name="reserve_msg">Do you want to reserve this item ?</string>
    <string name="reserve_food_msg">Do you want to reserve this food?</string>
    <string name="reserve_object_msg">Do you want to reserve this object?</string>
    <string name="my_profile">My Profile</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="type_of_announcement">Type of announcement</string>
    <string name="what_you_want_to_give">What do you want to give?</string>
    <string name="update_announcement">Update Announcement</string>
    <string name="edit_announcement">Edit Announcement</string>
    <string name="alert_setting">Alert Settings</string>
    <string name="my_announcement">My Announcements</string>
    <string name="my_fav">My Favorites</string>
    <string name="my_package">My Package</string>
    <string name="community_impact"><![CDATA[Community & impact]]></string>
    <string name="yajari">Ya Jary</string>
    <string name="out_partner">Our Partners</string>
    <string name="account_parameter">Account Settings</string>
    <string name="logout">Logout</string>
    <string name="logout_msg">Do you want to log out ?</string>
    <string name="announcement">Announcements</string>
    <string name="users">Users</string>
    <string name="pricing_for_everyone">Pricing for everyone</string>
    <string name="subscription">Subscription</string>
    <string name="hi">Hi</string>
    <string name="you_are_now_a_premium_member">You are now a Premium Member</string>
    <string name="status">Status</string>
    <string name="valid_till">Valid Till</string>
    <string name="total_users">Total Users</string>
    <string name="total_donation">Total Donations</string>
    <string name="personnel_information">Personal information</string>
    <string name="change_password">Change password</string>
    <string name="delete_account">Delete account</string>
    <string name="delete_account_s">Delete account</string>
    <string name="delete_account_msg">Do you want to delete your account?</string>
    <string name="delete_desc">if deleted, it will not be recovered again !</string>
    <string name="delete_account_desc">if you want to delete your account please enter your password!</string>
    <string name="current_password">Current password</string>
    <string name="enter_current_password">Enter current password</string>
    <string name="new_password">New password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="change_pwd_msg">Your password has been changed successfully!</string>
    <string name="write_message">Write message</string>
    <string name="we_will_contact_you_very_soon">We will contact you very soon !</string>
    <string name="about_us">About us</string>
    <string name="help_amp_support"><![CDATA[Help & support]]></string>
    <string name="terms_amp_conditions"><![CDATA[Terms & conditions]]></string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="faqs">FAQs</string>
    <string name="edit_profile">Edit profile</string>
    <string name="upload_amp_update_photo"><![CDATA[Upload & Update photo]]></string>
    <string name="save_amp_update"><![CDATA[Save & Update]]></string>
    <string name="profile_update_msg">Your profile has been updated successfully!</string>
    <string name="reservation_reconfirm_msg">Do you want to confirm the reservation?</string>
    <string name="really_cancel_reservation_msg">Do you want to cancel the reservation?</string>
    <string name="rate_re_confirm_msg">Do you want to confirm the submission of rate?</string>
    <string name="sub_confirm_msg">Are you sure you want to purchase subscription plan.</string>
    <string name="report">Report</string>
    <string name="review_success_msg">Your review has been submitted successfully!</string>
    <string name="closed_announcement_msg">Do you want to finalize this announcement?</string>
    <string name="closed_success_msg">Your announcement has been finalized successfully!</string>
    <string name="reservation_success_msg">Your announcement has been reserved successfully!</string>
</resources>