<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:fillViewport="true"
    android:scrollbars="none"
    android:layout_height="match_parent"
    tools:context=".ui.signup.SignUpActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:padding="@dimen/padding_20"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatTextView
            style="@style/tvStyle700"
            android:id="@+id/createAccountTV"
            android:text="@string/create_account"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/createDescTV"
                style="@style/tvStyle400"
                android:gravity="center"
                android:layout_marginTop="@dimen/margin_10"
                android:text="@string/create_account_desc"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/createAccountTV"
               />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/nameTV"
            style="@style/tvStyle500"
            android:layout_marginTop="@dimen/margin_20"
            android:text="@string/name_s"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/createDescTV"
            />
        <androidx.appcompat.widget.AppCompatEditText
            style="@style/edtStyle"
            android:id="@+id/nameEDT"
            android:drawablePadding="@dimen/padding_12"
            android:drawableStart="@drawable/name_selector"
            android:hint="@string/name"
            android:maxLength="50"
            android:imeOptions="actionNext"
            android:inputType="textCapSentences"
            android:layout_marginTop="@dimen/margin_12"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nameTV"
            />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/dobTV"
            style="@style/tvStyle500"
            android:layout_marginTop="@dimen/margin_20"
            android:text="@string/date_of_birth"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameEDT"
            />
        <androidx.appcompat.widget.AppCompatEditText
            style="@style/edtStyle"
            android:id="@+id/dobEDT"
            android:drawablePadding="@dimen/padding_12"
            android:drawableStart="@drawable/dob_selector"
            android:hint="@string/enter_date_of_birth"
            android:imeOptions="actionNext"
            android:inputType="none"
            android:focusable="false"
            android:layout_marginTop="@dimen/margin_12"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dobTV"
            />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/mobileTV"
            style="@style/tvStyle500"
            android:layout_marginTop="@dimen/margin_20"
            android:text="@string/mobile_number_s"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dobEDT"
            />
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/mobileCL"
            android:layout_marginTop="@dimen/margin_12"
            android:background="@drawable/edt_shape_selector"
            app:layout_constraintTop_toBottomOf="@id/mobileTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/mobileIV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:src="@drawable/mobile_selector"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.rilixtech.widget.countrycodepicker.CountryCodePicker
                android:id="@+id/signupCCP"
                style="@style/Text_SemiBold_14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                app:ccp_defaultCode="33"
                app:ccp_hideNameCode="true"
                app:ccp_hidePhoneCode="false"
                app:ccp_showFlag="false"
                app:ccp_showFullName="false"
                app:ccp_textSize="14sp"
                app:ccp_textColor="@color/color_151515"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/mobileIV"
                app:layout_constraintTop_toTopOf="parent" />


            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/mobileEDT"
                style="@style/edtStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@null"
                android:layout_marginEnd="@dimen/margin_12"
                android:hint="@string/mobile_number"
                android:imeOptions="actionNext"
                android:inputType="phone"
                android:maxLines="1"
                android:maxLength="15"
                android:paddingVertical="@dimen/padding_20"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/signupCCP"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/locationTV"
            style="@style/tvStyle500"
            android:layout_marginTop="@dimen/margin_20"
            android:text="@string/location_r"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mobileCL"
            />
        <androidx.appcompat.widget.AppCompatEditText
            style="@style/edtStyle"
            android:id="@+id/locationEDT"
            android:drawablePadding="@dimen/padding_12"
            android:drawableStart="@drawable/location_selector"
            android:hint="@string/enter_location"
            android:imeOptions="actionNext"
            android:inputType="none"
            android:focusable="false"
            android:maxLines="1"
            android:lines="1"
            android:singleLine="true"
            android:scrollHorizontally="true"
            android:ellipsize="end"
            android:paddingEnd="@dimen/margin_40"
            android:layout_marginTop="@dimen/margin_12"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/locationTV"
            />
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/currentLocationIV"
            android:src="@drawable/ic_location_gps"
            android:padding="@dimen/padding_5"
            app:layout_constraintEnd_toEndOf="@id/locationEDT"
            app:layout_constraintBottom_toBottomOf="@id/locationEDT"
            android:layout_marginEnd="@dimen/margin_15"
            app:layout_constraintTop_toTopOf="@id/locationEDT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/emailTV"
            android:layout_width="wrap_content"
            style="@style/tvStyle500"
            android:layout_marginTop="@dimen/margin_20"
            android:text="@string/email_address_s"
            app:layout_constraintTop_toBottomOf="@id/locationEDT"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_height="wrap_content"/>
        <androidx.appcompat.widget.AppCompatEditText
            style="@style/edtStyle"
            android:id="@+id/emailEDT"
            android:drawablePadding="@dimen/padding_12"
            android:imeOptions="actionNext"
            android:maxLength="50"
            android:drawableStart="@drawable/email_selector"
            android:hint="@string/enter_email_address"
            android:inputType="textEmailAddress"
            android:layout_marginTop="@dimen/margin_12"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/emailTV"
            />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/passwordTV"
            android:layout_width="wrap_content"
            style="@style/tvStyle500"
            android:layout_marginTop="@dimen/margin_20"
            android:text="@string/password_s"
            app:layout_constraintTop_toBottomOf="@id/emailEDT"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_height="wrap_content"/>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordTIL"
            style="@style/tilStyle"
            android:background="@null"
            app:passwordToggleDrawable="@drawable/show_password_selector"
            app:passwordToggleEnabled="true"
            android:hint="@string/enter_password"
            android:layout_marginTop="@dimen/margin_12"
            app:layout_constraintTop_toBottomOf="@id/passwordTV"
            app:layout_constraintStart_toStartOf="parent"
            app:passwordToggleTint="@color/color_8C8C8C"
            app:layout_constraintEnd_toEndOf="parent"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordEDT"
                style="@style/edtStyle"
                android:drawablePadding="@dimen/padding_12"
                android:drawableStart="@drawable/password_selector"
                android:layout_width="match_parent"
                android:imeOptions="actionNext"
                android:hint="@string/enter_password"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/confirmPasswordTV"
            android:layout_width="wrap_content"
            style="@style/tvStyle500"
            android:layout_marginTop="@dimen/margin_20"
            android:text="@string/confirm_password_s"
            app:layout_constraintTop_toBottomOf="@id/passwordTIL"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_height="wrap_content"/>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirmPasswordTIL"
            style="@style/tilStyle"
            android:background="@null"
            app:passwordToggleDrawable="@drawable/show_password_selector"
            app:passwordToggleEnabled="true"
            android:hint="@string/enter_confirm_password"
            android:layout_marginTop="@dimen/margin_12"
            app:layout_constraintTop_toBottomOf="@id/confirmPasswordTV"
            app:layout_constraintStart_toStartOf="parent"
            app:passwordToggleTint="@color/color_8C8C8C"
            app:layout_constraintEnd_toEndOf="parent"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confirmPasswordEDT"
                style="@style/edtStyle"
                android:drawablePadding="@dimen/padding_12"
                android:drawableStart="@drawable/password_selector"
                android:layout_width="match_parent"
                android:imeOptions="actionDone"
                android:hint="@string/enter_confirm_password"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/acceptCB"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:button="@drawable/checkbox_selector"
            android:layout_marginTop="@dimen/margin_15"
            app:layout_constraintTop_toBottomOf="@id/confirmPasswordTIL"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/privacyTV"
            style="@style/tvStyle500"
            android:lineSpacingExtra="5dp"
            android:layout_marginStart="@dimen/margin_10"
            android:text="@string/terms_privacy_text"
            android:textColor="@color/color_8C8C8C"
            app:layout_constraintTop_toTopOf="@id/acceptCB"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="@dimen/text_12"
            app:layout_constraintStart_toEndOf="@id/acceptCB"
           />

        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            style="@style/btnStyle"
            android:id="@+id/createAccountBTN"
            android:text="@string/create_account"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/margin_20"
            app:layout_constraintTop_toBottomOf="@id/privacyTV"
            android:layout_height="wrap_content"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:id="@+id/alreadyTV"
            style="@style/tvStyle400"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintEnd_toStartOf="@id/loginTV"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/loginTV"
            app:layout_constraintBottom_toBottomOf="@id/loginTV"
            android:text="@string/already_have_an_account"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:id="@+id/loginTV"
            style="@style/tvStyle700"
            android:textSize="@dimen/text_14"
            android:textColor="@color/colorPrimary"
            android:layout_marginStart="@dimen/padding_6"
            android:layout_marginTop="@dimen/margin_20"
            android:paddingVertical="@dimen/padding_5"
            app:layout_constraintVertical_bias="1"
            app:layout_constraintTop_toBottomOf="@id/createAccountBTN"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/alreadyTV"
            android:text="@string/login"
            android:layout_height="wrap_content"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>