<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.forgot_password.ForgotPasswordActivity">
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/backIV"
        android:src="@drawable/ic_back_black"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/margin_20"
        android:layout_marginTop="@dimen/margin_20"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/forgotLogoIV"
        android:src="@drawable/ic_forgot_password"
        android:layout_marginTop="@dimen/margin_20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/backIV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/forgotPasswordTV"
        android:layout_marginTop="@dimen/margin_25"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/forgotLogoIV"
        style="@style/tvStyle700"
        android:text="@string/forgot_password"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/forgotDescTV"
        style="@style/tvStyle400"
        android:gravity="center"
        android:lineSpacingExtra="3dp"
        android:layout_marginTop="@dimen/margin_10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/forgot_desc"
        app:layout_constraintTop_toBottomOf="@id/forgotPasswordTV"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/emailTV"
        android:layout_width="wrap_content"
        style="@style/tvStyle500"
        android:layout_marginTop="@dimen/margin_40"
        android:text="@string/email_address"
        app:layout_constraintTop_toBottomOf="@id/forgotDescTV"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/margin_20"
        android:layout_height="wrap_content"/>
    <androidx.appcompat.widget.AppCompatEditText
        style="@style/edtStyle"
        android:id="@+id/emailEDT"
        android:drawablePadding="@dimen/padding_12"
        android:imeOptions="actionNext"
        android:drawableStart="@drawable/email_selector"
        android:hint="@string/enter_email_address"
        android:inputType="textEmailAddress"
        android:layout_marginTop="@dimen/margin_12"
        android:layout_marginHorizontal="@dimen/margin_20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailTV"
        />
    <com.google.android.material.button.MaterialButton
        style="@style/btnStyle"
        android:id="@+id/sendBTN"
        android:text="@string/send_now"
        android:layout_marginHorizontal="@dimen/margin_20"
        android:layout_marginTop="@dimen/margin_40"
        app:layout_constraintTop_toBottomOf="@id/emailEDT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</androidx.constraintlayout.widget.ConstraintLayout>